Fix position issue on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -245,6 +245,10 @@ header::before {
     align-items: center;
     flex-direction: column;
   }
+
+  html {
+    scroll-padding-top: 70px;
+  }
 }
 
 .edu-card {
